build: add Agent SDK, fix non-breaking npm vulnerabilities
Install @anthropic-ai/claude-agent-sdk for subscription-based auth.
npm audit fix resolves ajv, hono, minimatch, basic-ftp vulns.
Remaining 11 vulns are in discord.js/telegram-bot transitive deps
(fix requires breaking major version downgrades).

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:observer": "tsc && node dist/test/test-observer.js"
   },
   "dependencies": {
+    "@anthropic-ai/claude-agent-sdk": "^0.2.59",
     "@hono/node-server": "^1.19.9",
     "@types/better-sqlite3": "^7.6.13",
     "@types/react": "^19.2.14",
