--- a/package.json
+++ b/package.json
@@ -26,15 +26,17 @@
     "ink-gradient": "^4.0.0",
     "ink-spinner": "^5.0.0",
     "jsonrepair": "^3.13.2",
-    "node-telegram-bot-api": "^0.67.0",
+    "grammy": "^1.40.0",
     "qrcode-terminal": "^0.12.0",
     "react": "^19.2.4",
     "whatsapp-web.js": "^1.34.6"
   },
   "devDependencies": {
     "@types/node": "^25.2.2",
-    "@types/node-telegram-bot-api": "^0.64.13",
     "@types/qrcode-terminal": "^0.12.2",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "undici": "^6.23.0"
   }
 }
